# mandelbrot.python

./: CHANGELOG.md  README.md  pyproject.toml
src/my_mandelbrot_py/: __init__.py  cli.py  mandelbrot.py
tests/: test_mandelbrot.py
