[project]
name = "my-mandelbrot-py"
version = "0.1.0"
description = "A small application that draws the Mandelbrot set."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Your Name", email = "you@example.com"}]
dependencies = ["Pillow"]

[project.scripts]
mandelbrot = "my_mandelbrot_py.cli:main"

[project.urls]
"Homepage" = "https://example.com"

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver2"
version_provider = "pep621"
update_changelog_on_bump = true
